# racformer-company-front

./: .gitignore  README.md  utils.py  val.py
configs/: company_calibration_20260630.json  racformer_company_front.py  racformer_company_front_velocity_v2.py
configs/deploy/: racformer_company_front_left_pytorch.py
deploy/: README.md  __init__.py  export_onnx.py  input_schema.py  offline_demo.py  onnx_wrapper.py  postprocessing.py  preprocessing.py  profile.py  profile_forward.py  pytorch_runner.py  temporal_buffer.py  verify_radar_scatter.py
deploy/ros/: README.md
deploy/tensorrt/: README.md  __init__.py  audit_onnx.py  build_engine.py  insert_identity_barriers.py  parse_onnx.py  remove_concat_inputs.py  remove_zero_concat_inputs.py  rewrite_trt85_onnx.py  simplify_onnx.py  validate_engine.py
deploy/tensorrt/plugins/bev_pool_v2/: CMakeLists.txt  README.md  bev_pool_v2_kernel.cu  bev_pool_v2_kernel.h  bev_pool_v2_plugin.cpp  msmv_sampling_kernel.cu  msmv_sampling_kernel.h  msmv_sampling_plugin.cpp  single_camera_projection_kernel.cu  single_camera_projection_kernel.h  single_camera_projection_plugin.cpp
loaders/: __init__.py  company_front_dataset.py  nuscenes_dataset.py
loaders/pipelines/: __init__.py  company_front.py  loading.py
models/: bev_self_attention.py  racformer.py  racformer_head.py  racformer_transformer.py  sparsebev_sampling.py
models/bbox/: utils.py
tools/: convert_company_to_racformer.py  deploy_profile.py  render_company_fusion_video.py  render_company_radar_video.py  visualize_company_alignment.py  visualize_company_predictions.py
(+6 files in other folders)
